拍一拍 修改查看成交协议接口